# Solana-casino-games

./: Anchor.toml  README.md  id.json  package-lock.json  package.json
cli/: command.ts  scripts.ts  types.ts
programs/coinflip/: Cargo.toml
programs/coinflip/src/: account.rs  error.rs  lib.rs
tests/: coinflip.ts
